Use text blocks for internal Error Prone test outputs
The min JDK version for OSS is being updated to 17 as part of: https://github.com/google/error-prone/issues/3803

PiperOrigin-RevId: 673919944